objects/gvp__Birst_Security_Filter__c.object
<CustomObject>
    <fields>
        <fullName>gvp__Birst_Security_Object__c</fullName>
        <label>BI Security Object</label>
        <referenceTo>gvp__Birst_Security_Object__c</referenceTo>
        <relationshipName>Birst_Security_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gvp__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Unused Object (1)</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BSF-{00000}</displayFormat>
        <label>Unused Object 1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unused_Object_1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>